Improve local development environment
This commit improves the local development environment in various
significant ways. It:

- Modifies Apache to run as user 1000; the authors Linux user. This
  makes file handling considerably simpler
- Installs more XDEBUG configuration associated with profiling etc,
  auto instantiation etc.

It additionally adds a task that creates a shell in the apache container
suitable for running commands and the like.

--- a/deploy/docker-compose/containers/web/Dockerfile
+++ b/deploy/docker-compose/containers/web/Dockerfile
@@ -1,4 +1,24 @@
 FROM quay.io/sitewards/apache-php:7.2-latest
 
-RUN apt-get install --yes \
-    php7.2-xdebug
+ENV USER_UID 1000
+
+# Install PHP xdebug.
+RUN apt-get update && \
+    apt-get install php7.2-xdebug --yes
+
+# Configure XDBEUG
+ADD etc/php/7.2/mods-available/xdebug.ini /etc/php/7.2/mods-available/xdebug.ini
+
+RUN for PHP_CONFIG_PATH in "/etc/php/7.2/cli/" "/etc/php/7.2/apache2/"; do \
+        sed --in-place 's/opcache.enable=1/opcache.enable=0/' "${PHP_CONFIG_PATH}/php.ini" && \
+        sed --in-place 's/opcache.enable_cli=1/opcache.enable_cli=0/' "${PHP_CONFIG_PATH}/php.ini" && \
+        sed --in-place 's/;sendmail_path =/sendmail_path=\/usr\/sbin\/ssmtp -t/' "${PHP_CONFIG_PATH}/php.ini"; \
+    done;
+
+# Modify apache to run as a specific user; should be the user who owns the PHP files being worked on.
+# Last in the stack as it invalidates cache.
+RUN adduser \
+        --uid $USER_UID \
+        --gecos "" \
+        --disabled-password developer && \
+  sed --in-place 's/www-data/developer/' /etc/apache2/envvars
