--- a/app/server/composer.json
+++ b/app/server/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "elasticquent/elasticquent": "^1.0",
         "elasticsearch/elasticsearch": "^6.0",
         "laravel/lumen-framework": "5.7.*",
         "vlucas/phpdotenv": "~2.2"
