--- a/app/server/composer.json
+++ b/app/server/composer.json
@@ -17,6 +17,9 @@
         "mockery/mockery": "~1.0"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
