Add configuration so that it's possible to discover Elasticsearch
This commit adds configuration such that it is possible to discover the
Elasticsearch node within the `docker-compose` network.

It's added via Environment variable, and expressed in Lumens
configuration primitive so that the `config` helper can return
configuration as required.

--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       SERVER_NAME: "api.esearch.local"
       SERVER_ADMIN: "webmaster@esearch.local"
       DOCUMENT_ROOT: "/var/www/html/server/public"
+
+      ELASTICSEARCH_HOST: "elasticsearch"
     volumes:
       - ./../../app:/var/www/html
   elasticsearch:
