--- a/app/server/composer.json
+++ b/app/server/composer.json
@@ -16,6 +16,9 @@
         "mockery/mockery": "~1.0"
     },
     "autoload": {
+        "files": [
+            "database/seeds/ProductSeeder.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
