Disable opcache in container
Currently there is a bug in which the opcache is still enabled in the
container. This is likely due to a change in the defaults in the more
recent Debian versions, but is annoying for local development.

This commit disables opcache by default.

--- a/deploy/docker-compose/containers/web/Dockerfile
+++ b/deploy/docker-compose/containers/web/Dockerfile
@@ -10,9 +10,8 @@ RUN apt-get update && \
 ADD etc/php/7.2/mods-available/xdebug.ini /etc/php/7.2/mods-available/xdebug.ini
 
 RUN for PHP_CONFIG_PATH in "/etc/php/7.2/cli/" "/etc/php/7.2/apache2/"; do \
-        sed --in-place 's/opcache.enable=1/opcache.enable=0/' "${PHP_CONFIG_PATH}/php.ini" && \
-        sed --in-place 's/opcache.enable_cli=1/opcache.enable_cli=0/' "${PHP_CONFIG_PATH}/php.ini" && \
-        sed --in-place 's/;sendmail_path =/sendmail_path=\/usr\/sbin\/ssmtp -t/' "${PHP_CONFIG_PATH}/php.ini"; \
+        sed --in-place 's/;opcache.enable=1/opcache.enable=0/' "${PHP_CONFIG_PATH}/php.ini" && \
+        sed --in-place 's/opcache.enable_cli=1/opcache.enable_cli=0/' "${PHP_CONFIG_PATH}/php.ini"; \
     done;
 
 # Modify apache to run as a specific user; should be the user who owns the PHP files being worked on.
