Implement a layer of authentication
This commit builds in the previous work to include keycloak as the
canonical authentication server by implementing authentication based on
OpenID, and the keycloak implementation.

== Design Notes ==

=== Alternative Design: Manually check the JWT ===

While investigating this task the author learned a considerable amount
authentication, and managing authentication via Keycloak. The first pass
at this manually queried Keycloak for a given key, and manually handled
oAuth implementation. However, it turns out that OpenID builds on oAuth,
and suits the authors requirements nicely.

=== Restructuring the failure handler ===

While doing this work it became clear that we should not construct
responses in the middleware, even for error conditions.

Rather, the implementation of OpenID provided the good example of simply
dispatching exceptions in the middleware stack, and deferring handling
of those extensions to the router exception handler.

This commit takes advantage of this pattern to return an appropriate
JSON response in all classes of issue, including critical (but
recoverable) server failures, as well as the invariable authentication
failures.

=== Removal of auth middleware ===

This commit also removes the boilerplate authentication middleware, as
it is not going to be used.

=== App Service Provider ===

As part of this work limitations with lumens database implementation
became apparent. They were addressed in the app service provider as
implemented in other projects.

=== Helpers ===

All that can be said with the app service provider can also be said
about helpers.

=== Database, SQLite ===

The extension that was implemented (Fudarious\OIDConnect) did some
extended checking of the state parameter of the oAuth request /
response authentication workflow.

To do this, they need to retain the token in some sort of state. The
natural state to do this is either the KV store Redis, or the database.

This commit thus enables the 

--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -36,15 +36,20 @@ services:
       SERVER_ADMIN: "webmaster@esearch.local"
       DOCUMENT_ROOT: "/var/www/html/server/public"
 
+      # Database
+      DB_CONNECTION: "sqlite"
+      DB_DATABASE: "/var/www/html/server/storage/db/database.sqlite"
+
+      # ElasticSearch
       ELASTICSEARCH_HOST: "es.esearch.local"
 
-      # Single sign on properties
-      KEYCLOAK_SERVER: "http://keycloak.local"
-      KEYCLOAK_SERVER_REALM: "master"
-
-      OAUTH2_CLIENT_ID: "esearch"
-      OAUTH2_CLIENT_SECRET: ""
-      OAUTH2_REDIRECT_URL: "http://api.esearch.local/oauth2/redirect"
+      # OpenID
+      OPENID_CLIENT_ID: "esearch"
+      OPENID_CLIENT_SECRET: ""
+      OPENID_URL_REDIRECT: "https://api.esearch.local/auth/callback"
+      OPENID_URL_AUTH: "http://keycloak.local:8080/auth/realms/master/protocol/openid-connect/auth"
+      OPENID_URL_TOKEN: "http://keycloak.local:8080/auth/realms/master/protocol/openid-connect/token"
+      OPENID_URL_KEYS: "http://keycloak.local:8080/auth/realms/master/protocol/openid-connect/certs"
     volumes:
       - ./../../app:/var/www/html
   es.esearch.local:
