--- a/app/server/composer.json
+++ b/app/server/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.1.3",
         "elasticsearch/elasticsearch": "^6.0",
+        "furdarius/oidconnect-laravel": "dev-master",
         "laravel/lumen-framework": "5.7.*",
         "vlucas/phpdotenv": "~2.2"
     },
@@ -17,6 +18,7 @@
     },
     "autoload": {
         "files": [
+            "app/helpers.php",
             "database/seeds/ProductSeeder.php"
         ],
         "classmap": [
