Implement limited pagination
This commit implements a limited pagination by passing the query
parameters from the API directly to the underlying elasticsearch engine.

== Design Notes ==

=== Limitations ===

Currently there is no validation that the parameters are numeric, nor
within reasonable bounds.

--- a/api/swagger-spec/api.yml
+++ b/api/swagger-spec/api.yml
@@ -327,8 +327,8 @@ components:
           items:
             $ref: "#/components/schemas/Product"
         pageToken:
-          type: "string"
-          example: "10"
+          type: number
+          example: 5
         pageSize:
           type: "number"
           example: 50
